--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Django==2.1.3
-djangorestframework==3.9.0
-Pillow==5.3.0
+django ==2.2
+djangorestframework ==3.9.0
+pillow ==5.3.0
+django-wkhtmltopdf 
+django-rest-multiple-models 
+django-multiselectfield 
+filters-django 
+django-filter 
+six 
+drf-pdf 
